--- a/scss/style.scss
+++ b/scss/style.scss
@@ -432,12 +432,11 @@ section.plus{
 	a.download{
 		display: block;
 		position: relative;
-		background: #ccc;
 		width: 200px;
 		margin: 40px auto;
 		
 		&:hover div{
-			background: lighten(#252525, 4);
+			background: lighten($couleur-texte-corporate, 4);
 		}
 		&:hover img{
 			opacity: 1;
@@ -445,17 +444,17 @@ section.plus{
 	}
 	a.download img{
 		@include box-shadow();
-		opacity: .8;
+		opacity: .9;
 		@include transition();
 	}
 	a.download div{
-		@include ribbon();
+		@include ribbon($couleur-texte-corporate);
 		position: absolute;
 		top: 20%;
 		width: 150%;
 		left: -25%;
 		padding: 15px 0;
-		background: #252525;
+		background: $couleur-texte-corporate;
 		text-align: center;
 		@include transition();
 	}
@@ -566,9 +565,11 @@ section.plus{
 #prop1,
 #prop2,
 #prop3,
-#prop4,
-#plus-entrepreneuriat{
+#prop4{
 	background: $couleur-fond-entrepreneur;
+}
+#plus-entrepreneuriat{
+	background: $couleur-fond-contraste;
 }
 
 #transversalite{
